--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div>
   <center>
     <div style="display:inline-block" align="center"  >
-     <form method="get" action= "index.html">
+     <form method="get" action= "indexI.html">
       <input type="submit" value="play"/>
       </form>
       <form method="get" action="indexopcionews.html">
