--- a/indexI.html
+++ b/indexI.html
@@ -4,7 +4,6 @@
 	<title>Ahorcado</title>
 	<meta charset="utf-8">
 	<script type="text/javascript" src="codigo.js"></script>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     <link rel="stylesheet" type="text/css" href="style.css">
 	<meta name="viewport" content="width=device-width, maximum-scale=0.6, minimum-scale=0.2">
 </head>
@@ -28,5 +27,35 @@
 
 
 	</form>
+    <li>Culebra</li>
+    <li>Ballena</li>
+    <li>Anguila</li>
+    <li>Pez Leon</li>
+    <li>Delfin</li>
+    <li>Pez espada</li>
+    <li>Mantarrallas</li>
+    <li>Megalodon</li>
+    <li>Cangrejo</li>
+    <li>Pulpo</li>
+    <li>Caballito de mar</li>
+    <li>Almeja</li>
+    <li>Estrella marina</li>
+    <li>Planton</li>
+    <li>Calamar</li>
+    <li>Pez payaso</li>
+    <li>Medusa</li>
+    <li>Rana</li>
+    <li>Cocodrilo</li>
+    <li>Esponja</li>
+    <li>Anguila</li>
+    <li>Serpiente Marina</li>
+    <li>charales</li>
+    <li>pez globo</li>
+    <li>Tiburon</li>
+    <li>Tiburon martillo</li>
+    <li>Tortuga</li>
+    <li>Foca</li>
+    <li>Pepinillo de mar</li>
+      
 </body>
 </html>
