--- a/indexI.html
+++ b/indexI.html
@@ -50,7 +50,7 @@
     <li>Anguila</li>
     <li>Serpiente Marina</li>
     <li>charales</li>
-    <li>pez globo</li>
+    <li>Pez globo</li>
     <li>Tiburon</li>
     <li>Tiburon martillo</li>
     <li>Tortuga</li>
